--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -18,5 +18,11 @@
     <string name="periode">Periode de connfinement (par jours)</string>
 
     <string name="title_activity_login">Covid-19 Test</string>
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="country__prompt">Choose a country</string>
+    <string-array name="country__arrays">
+        <item>positive</item>
+        <item>negative</item>
 
+    </string-array>
 </resources>
