--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -22,6 +22,9 @@
     <string name="country__prompt">Choose a country</string>
     <string name="positive_retablie">Test Positif (rétablis du virus)</string>
     <string name="positive_en_cours">Test Positif (porteurs du virus)</string>
+    <string name="test_covid19">Test Covid19</string>
+    <string name="n_carte_d_identit">N° carte d\'identité</string>
+    <string name="rechercher">Rechercher</string>
     <string-array name="country__arrays">
         <item>positive</item>
         <item>negative</item>
