--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,9 +24,11 @@
     <string name="positive_en_cours">Test Positif (porteurs du virus)</string>
     <string name="test_covid19">Test Covid19</string>
     <string name="n_carte_d_identit">N° carte d\'identité</string>
-    <string name="rechercher">Rechercher</string>
     <string name="listes_des_patients">Listes des Patients</string>
     <string name="ajouter_patient">Ajouter Patient</string>
+    <string name="Horsliste">Ce personne n\'a jamais effectué un test Covid19</string>
+    <string name="rechercher">Rechercher</string>
+    <string name="test_negative">Test Negative</string>
     <string-array name="country__arrays">
         <item>positive</item>
         <item>negative</item>
