--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,46 +1,48 @@
 <resources>
-    <string name="app_name" translatable="false">Covid-19Test</string>
-    <string name="nom" translatable="false">Nom</string>
-    <string name="prenom" translatable="false">Prenom</string>
-    <string name="prompt_email" translatable="false">Identifiant</string>
-    <string name="prompt_password" translatable="false">Mot de passe</string>
-    <string name="action_sign_in" translatable="false">Se Connecter</string>
-    <string name="action_sign_in_short" translatable="false">Sign in</string>
-    <string name="welcome" translatable="false">"Covid-19Test"</string>
-    <string name="invalid_username" translatable="false">Identifiant Non Valide</string>
-    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
-    <string name="login_failed" translatable="false">"Login failed"</string>
+    <string name="app_name">Covid-19Test</string>
+    <string name="nom">Nom</string>
+    <string name="prenom">Prenom</string>
+    <string name="prompt_email">Identifiant</string>
+    <string name="prompt_password">Mot de passe</string>
+    <string name="action_sign_in">Se Connecter</string>
+    <string name="action_sign_in_short">Sign in</string>
+    <string name="welcome">"Covid-19Test"</string>
+    <string name="invalid_username">Identifiant Non Valide</string>
+    <string name="invalid_password">"Le mot de passe doit contenir> 5 caractères "</string>
+    <string name="login_failed">"Login failed"</string>
     <string name="title_activity_ministeresante" translatable="false">MainActivity</string>
 
-    <string name="action_settings">Settings</string>
+    <string name="action_settings">parametre</string>
     <string name="ajouter_persoone">Ajouter Personne</string>
 
     <string name="periode">Periode de connfinement (par jours)</string>
 
-    <string name="title_activity_login">Covid-19 Test</string>
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_login" translatable="false">Covid-19 Test</string>
+    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
     <string name="country__prompt">Choose a country</string>
     <string name="positive_retablie">Test Positif (rétablis du virus)</string>
     <string name="positive_en_cours">Test Positif (porteurs du virus)</string>
-    <string name="test_covid19">Test Covid19</string>
+    <string name="test_covid19" translatable="false">Test Covid19</string>
     <string name="n_carte_d_identit">N° carte d\'identité</string>
     <string name="listes_des_patients">Listes des Patients</string>
     <string name="ajouter_patient">Ajouter Patient</string>
     <string name="Horsliste">Ce personne n\'a jamais effectué un test Covid19</string>
     <string name="rechercher">Rechercher</string>
     <string name="test_negative">Test Negative</string>
-    <string name="pseudo">Pseudo</string>
-    <string name="password">password</string>
-    <string name="login">Login</string>
+    <string name="password">Mot de passe</string>
+    <string name="login">Se connecter</string>
     <string name="r_sultat_test">Résultat Test</string>
     <string name="liste_des_patients">liste des Patients</string>
     <string name="exp_14_pour_2_semaines">exp: 14 pour 2 semaines</string>
     <string name="zero">0</string>
-    <string name="ncinexample">096*****</string>
+    <string name="ncinexample" translatable="false">096*****</string>
     <string name="ajouter">Ajouter</string>
     <string-array name="country__arrays">
         <item>positive</item>
         <item>negative</item>
 
     </string-array>
+    <string name="pseudo">Identifiant</string>
+    <string name="negativeResult">\" avec la resultat Negative</string>
+    <string name="a_testé_le">" a testé le \""</string>
 </resources>
